Optimize IcmpDecoder.canDecode()
Do not access the packetChain multiple times and use instanceof pattern
to streamline checking.

Change-Id: I6045b758e57144ec68cd777b4a848de8d121a1c7
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>